--- a/supergraph.yaml
+++ b/supergraph.yaml
@@ -1,4 +1,4 @@
-federation_version: =2.10.0-alpha.2
+federation_version: =2.10.0-preview.0
 subgraphs:
   listings:
     routing_url: http://localhost # this value is ignored
